@@ -1,9 +1,6 @@
 package com.demo;
 
 import org.springframework.stereotype.Service;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Arrays;
 
 @Service
 public class PaymentService {
@@ -78,10 +75,15 @@ public class PaymentService {
     }
 
     public String addTrackingCode(String newCode) {
-        List<String> activeCodes = new ArrayList<>(Arrays.asList("TRACK123", "TRACK456"));
+        // REALISTIC BUG 5: UnsupportedOperationException (Immutable List modification)
+        // Java's List.of() returns an unmodifiable list.
+        java.util.List<String> activeCodes = java.util.List.of("TRACK123", "TRACK456");
 
+        // Blindly attempting to add to this list instantly crashes the application with
+        // a 500 error!
         activeCodes.add(newCode);
 
+        // The LLM needs to realize the list needs to be wrapped in a mutable ArrayList.
         return "Tracking code added successfully. Total active shipments: " + activeCodes.size();
     }
 }
